--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>Stats Done Quick for Games Done Quick</title>
+  <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
+  <div class="container">
   <h1>Stats Done Quick for Games Done Quick</h1>
   <p>This was made for fans/viewers of Speed Demo Archive's charity marathons who want quick, up-to-date information about runs, donations and incentives without being forced to either listen to the Twitch stream, wait for the ticker, or go into IRC chat. As such, the Twitch stream nor the IRC chat will not be embedded here. It can be found on the <a href="https://gamesdonequick.com/">Games Done Quick official website</a>.</p>
 
@@ -16,9 +18,11 @@
 
   <h2>Upcoming Runs</h2>
   <ul>
-    <li>{{soup.find_all('li')[2].text}}</li>
-    <li>{{soup.find_all('li')[3].text}}</li>
-    <li>{{soup.find_all('li')[4].text}}</li>
+    {% for game in soup.find_all('li', 'li-red') -%}
+    {% if "Upcoming Runs" not in game.text -%}
+    <li>{{ game.text }}</li>
+    {% endif %}
+    {% endfor %}
   </ul>
 
   <h2>Eligible Prizes for Current Run</h2>
@@ -32,5 +36,8 @@
 
   <h2>Current Donation Incentives</h2>
   <p>Coming soon... (need to grab from tracker)</p>
+</div>
+<script src="/static/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
