--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% set currGame = soup.find('li','li-blue').find('i').text -%}
+{% set currGame = soup.find('li','li-blue').find('i').text if soup.find('li','li-blue') -%}
 <!DOCTYPE html>
 <html>
 <head>
@@ -41,6 +41,7 @@
 
     <h2><div id="datetime"></div></h2>
 
+    {% if schedCurrGame != '' %}
     {% set currGameInfo = schedCurrGame.parent.parent -%}
     <h2>Current Game: {{ currGame }}</h2>
     <ul class="list-group">
@@ -57,6 +58,7 @@
       <li class="list-group-item">Couch Commentators: {{ currGameInfo.contents[15].text }}</li>
       {%- endif %}
     </ul>
+    {% endif %}
 
     <h2>Upcoming Runs</h2>
     <ul class="list-group">
