Add static data page and notes regarding conclusion of AGDQ 2015

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,9 @@
     <div class="page-header">
       <h1>Stats Done Quick for Games Done Quick</h1>
     </div>
+
+    <p><strong>Note: No more new data will be displayed, as the event has since ended. <a href="/static-data">Click here for an example page with static data</a></strong></p>
+
     <p>This was made for fans/viewers of Speed Demo Archive's charity marathons who want quick, up-to-date information about runs, donations and incentives without being forced to either listen to the Twitch stream, wait for the ticker, or go into IRC chat. As such, the Twitch stream nor the IRC chat will not be embedded here. It can be found on the <a href="https://gamesdonequick.com/">Games Done Quick official website</a>.</p>
 
     <h2>Donations Stats</h2>
